--- a/modules/example003/src/main/resources/org/rapidpm/ddi/examples/example003/ui/main/edit/EditPane.fxml
+++ b/modules/example003/src/main/resources/org/rapidpm/ddi/examples/example003/ui/main/edit/EditPane.fxml
@@ -1,10 +1,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<fx:root type="org.rapidpm.ddi.examples.example003.ui.main.edit.EditPane"
+<?import org.rapidpm.ddi.examples.example003.ui.main.edit.EditPane?>
+<fx:root xmlns:fx="http://javafx.com/fxml"
+         type="org.rapidpm.ddi.examples.example003.ui.main.edit.EditPane"
          fx:controller="org.rapidpm.ddi.examples.example003.ui.main.edit.EditPaneController"
-         xmlns:fx="http://javafx.com/fxml"
-    fx:id="editPane" >
+         fx:id="editPane">
   <VBox>
     <Button fx:id="btn" onAction="#onDoSomething" text="Edit Button"/>
     <Label fx:id="lb" text="Hello Edit"/>
